[package]
name = "pgpdump"
version = "0.1.0"
authors = ["Kunal Sarkhel <ksarkhel@gmu.edu>"]

[dependencies]
log = "0.4.1"
yaml-rust = ">= 0.3"
clap = {version = "2", features = ["yaml"]}
clippy = { version = "*", optional = true }

[lib]
name = "pgpdump"
path = "src/lib.rs"

[[bin]]
name = "pgpdump"
path = "src/bin.rs"
